Update README and revert splash icon

--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -7,6 +7,7 @@
         <bitmap
             android:gravity="center"
             android:src="@mipmap/ic_launcher" />
+            <!-- android:src="@drawable/web_hi_res_512" /> -->
     </item>
 
     <!-- You can insert your own image assets here -->
